--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "library_model"
+name = "client"
 version = "0.1.0"
 edition = "2021"
 
@@ -8,7 +8,10 @@ edition = "2021"
 [dependencies]
 library_types = { path = "../library_types" }
 db_wrapper = { path = "../db_wrapper" }
-file_io = { path = "../file_io"}
-file_parser = { path = "../file_parser"}
-tokio = { version = "1.27.0", features = ["full"] }
-async-recursion = "1.0.4"
+file_io = { path = "../file_io" }
+server = { path = "../server" }
+
+lazy_static = "1.4.0"
+dirs = "5.0.0"
+directories = "5.0.0"
+tokio = "1.28.0"
