--- a/db_wrapper/Cargo.toml
+++ b/db_wrapper/Cargo.toml
@@ -9,6 +9,8 @@ edition = "2021"
 library_types = { path = "../library_types" }
 rusqlite = { version = "0.29.0", features = ["bundled"] }
 include-sqlite-sql = "0.2.1"
+serde = { version = "1.0.130", features = ["derive"] }
+serde_json = "1.0.68"
 csv = "1.1.6"
 lazy_static = "1.4.0"
 [dev-dependencies]
