--- a/db_wrapper/Cargo.toml
+++ b/db_wrapper/Cargo.toml
@@ -13,5 +13,6 @@ serde = { version = "1.0.130", features = ["derive"] }
 serde_json = "1.0.68"
 csv = "1.1.6"
 lazy_static = "1.4.0"
+chrono = "0.4.19"
 [dev-dependencies]
 tokio = { version = "1.0", features = ["full", "macros"] }
