--- a/library_types/Cargo.toml
+++ b/library_types/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+chrono = "0.4.24"
 uuid = { version = "1.3.0", features = ["v4"] }
 serde = { version = "1.0", features = ["derive"] }
