--- a/library_types/Cargo.toml
+++ b/library_types/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2021"
 chrono = "0.4.24"
 uuid = { version = "1.3.0", features = ["v4"] }
 serde = { version = "1.0", features = ["derive"] }
+time = "0.3.22"
