--- a/gui/QT/CMakeLists.txt
+++ b/gui/QT/CMakeLists.txt
@@ -9,17 +9,21 @@ set(CMAKE_AUTORCC ON)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_EXPORT_COMPILE_COMMANDS true)
 
-find_package(Qt6 COMPONENTS Core Gui Qml QuickControls2 QmlImportScanner WebView)
+find_package(Qt6 COMPONENTS Core Gui Qml QuickControls2 QmlImportScanner)
 find_package(Corrosion REQUIRED)
 include(corrosion_cxx.cmake)
+
+qt_add_resources(RESOURCES qml/qml.qrc)
 
 qt_add_executable(Castafiore
         cpp/main.cpp cpp/homemodel.cpp cpp/librarymodel.cpp
         cpp/homemodel.h cpp/librarymodel.h cpp/rust_util.h
         qml/main.qml qml/HomeView.qml qml/HomeViewDelegate.qml
-        qml/LibraryView.qml qml/LibraryViewDelegate.qml qml/PDFReader.qml qml/EpubReader.qml)
+        qml/LibraryView.qml qml/LibraryViewDelegate.qml qml/PDFReader.qml qml/EpubReader.qml
+        cpp/epubmodel.h
+        cpp/epubmodel.cpp)
 
 add_library_rust(PATH rust/cxx_layer NAMESPACE castafiore_cxx)
 target_link_libraries(Castafiore
         PUBLIC castafiore_cxx::cxx_layer
-        PRIVATE Qt6::Quick Qt6::Core Qt6::WebView ssl bz2)
+        PRIVATE Qt6::Quick Qt6::Core ssl bz2)
