--- a/db_wrapper/Cargo.toml
+++ b/db_wrapper/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 library_types = { path = "../library_types" }
+uuid = "1.4.1"
 rusqlite = { version = "0.29.0", features = ["bundled"] }
 include-sqlite-sql = "0.2.1"
 serde = { version = "1.0.130", features = ["derive"] }
