--- a/db_wrapper/Cargo.toml
+++ b/db_wrapper/Cargo.toml
@@ -8,12 +8,8 @@ edition = "2021"
 [dependencies]
 library_types = { path = "../library_types" }
 uuid = "1.4.1"
-rusqlite = { version = "0.29.0", features = ["bundled"] }
+rusqlite = { version = "0.30.0", features = ["bundled"] }
 include-sqlite-sql = "0.2.1"
 serde = { version = "1.0.130", features = ["derive"] }
 serde_json = "1.0.68"
-csv = "1.1.6"
-lazy_static = "1.4.0"
-chrono = "0.4.19"
-[dev-dependencies]
-tokio = { version = "1.0", features = ["full", "macros"] }
+log = "0.4.20"
